--- a/.pages.yml
+++ b/.pages.yml
@@ -5,7 +5,7 @@ content:
     type: collection
     path: '_posts'
     view:
-      fields: [ title, published, date ]
+      fields: [ title, published, date, tags ]
     fields:
       - name: published
         label: Published
@@ -20,6 +20,10 @@ content:
       - name: body
         label: Body
         type: rich-text
+      - name: tags
+        label: Tags
+        type: text
+        list: true
   - name: config
     label: Jekyll config
     path: _config.yml
