--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ defaults:
       comments: false
       share: false
       related: false
+      toc_sticky: true
   # _pages
   - scope:
       path: "_pages"
