--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-archives
 
 author:
   name   : "Asphyxiation by&nbsp;Oxygen&nbsp;Hands"
@@ -105,14 +106,40 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: false
 
-# category_archive:
-#   type: liquid
-#   path: /categories/
+category_archive:
+  type: jekyll-archives
+  path: /categories/
 tag_archive:
-  type: liquid
+  type: jekyll-archives
   path: /tags/
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+    - collections
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+    collection: archive-taxonomy
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
+    collection: /:collection/:name/
+
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:name/
 
 compress_html:
   clippings: all
