Turns out I have an about page!

--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,12 @@ author:
   bio   : "Piotr Gajos"
   avatar : "/assets/images/bio-photo.jpg"
   links:
-    - label: "Portfolio"
-      icon: "fas fa-fw fa-link"
-      url: "https://pgajos.com"
+    - label: "About"
+      icon: "fas fa-fw fa-user-secret"
+      url: "/about/"
+    - label: "Last.fm"
+      icon: "fab fa-fw fa-lastfm"
+      url: "https://www.last.fm/user/Pe8er"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Pe8er"
