--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -28,7 +28,7 @@ en: &DEFAULT_EN
   more_label                 : "Learn more"
   related_label              : "You may also enjoy"
   follow_label               : "⋅⋅⋅"
-  feed_label                 : "Feed"
+  feed_label                 : "RSS"
   powered_by                 : "Powered by"
   website_label              : "Website"
   email_label                : "Email"
@@ -87,7 +87,7 @@ es: &DEFAULT_ES
   more_label                 : "Ver más"
   related_label              : "Puede que también te interese"
   follow_label               : "Seguir:"
-  feed_label                 : "Feed"
+  feed_label                 : "RSS"
   powered_by                 : "Funciona con"
   website_label              : "Sitio web"
   email_label                : "Correo electrónico"
